refactor: Incluir test para aplicaciones sin bbdd
