# src/main/resources/api/swagger.yaml
@@ -49,6 +49,32 @@ paths:
           description: ok response
           schema:
             $ref: '#/definitions/identidadDigitalConsulta'
+  /hello/{name}/remote:
+    get:
+      tags:
+      - hello-world-remote
+      summary: say hello to name remote
+      description: say hello to name
+      operationId: getHelloByNameRemote
+      parameters:
+      - name: name
+        in: path
+        description: hello name
+        required: true
+        type: string
+        maxLength: 15
+      - name: X-Request-ID
+        in: header
+        description: Identificador único de la petición
+        required: false
+        type: string
+        format: uuid
+        x-example: AVDGSGRT-DHUEYR74R-SJDK75EJDSK
+      responses:
+        "200":
+          description: ok response
+          schema:
+            $ref: '#/definitions/identidadDigitalConsulta'
   /agencias/list:
     get:
       tags:
@@ -129,6 +155,11 @@ definitions:
     type: object
     properties:
       nombre:
+        type: string
+        example: hello juan
+        description: Nombre
+        maxLength: 40
+      saludo:
         type: string
         example: hello juan
         description: Nombre
